--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
     :root[data-theme="dark"] .brand{filter:invert(1) brightness(1.08)}
     :root[data-theme="light"] .brand{filter:none}
 
-    /* Title: exactly two lines, plain font (no bold) */
-    h1{margin:10px 0 14px}
+    /* Title: exactly two lines */
+    h1{margin:10px 0 44px}
     #mainTitle{display:flex;flex-direction:column;gap:6px;align-items:center;text-align:center;line-height:1.2;color:var(--headline)}
     #mainTitle .row1,#mainTitle .row2{font-weight:400;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
     #mainTitle .row1{font-size:52px}
     #mainTitle .row2{font-size:46px}
+    #mainTitle .row1 .lead{font-weight:400}
+    #mainTitle .row1 .date{font-weight:800}
+    #mainTitle .row2 .lear{font-weight:800}
 
     /* Main counter — boxier cells + bigger digits */
     .timer{display:grid;grid-template-columns:repeat(5,minmax(0,1fr));gap:14px}
@@ -50,19 +53,29 @@
     }
     .label{font-size:13px;text-transform:uppercase;letter-spacing:.12em;color:var(--subtle)}
 
-    /* Thin divider between main counter and phases */
-    .divider{border:0;border-top:1px solid var(--border);margin:16px 0 12px}
+    .divider{border:0;border-top:1px solid var(--border);margin:18px 0 12px}
 
     @keyframes blink{50%{opacity:.45}} .blink .number,.phase-card.blink{animation:blink .9s steps(2,start) infinite}
 
+    /* Phases layout */
     .phases{margin-top:0;display:grid;grid-template-columns:repeat(2,minmax(0,1fr));gap:12px}
+    @media (max-width: 680px){ .phases{grid-template-columns:1fr} }
+
     .phase-card{position:relative;background:var(--card);border:1px solid var(--border);border-radius:14px;padding:14px 12px;box-shadow:0 6px 24px rgba(0,0,0,.08)}
     :root[data-theme="dark"] .phase-card{box-shadow:0 6px 24px rgba(0,0,0,.2)}
     .phase-title{font-weight:700;color:var(--headline);font-size:clamp(15px,2.2vw,18px)}
     .phase-deadline{color:var(--muted);font-size:12px;margin-top:2px}
-    .phase-timer{position:relative;display:grid;grid-template-columns:repeat(5,1fr);gap:8px;margin-top:10px}
-    .p-cell{background:transparent;border:1px dashed var(--border);border-radius:10px;padding:10px 6px}
-    .p-number{font-family:Helvetica,"Helvetica Neue",Arial,sans-serif;font-weight:800;font-variant-numeric:tabular-nums;font-size:clamp(18px,4.6vw,28px);
+
+    /* Phase timer: 4 boxes, wraps two-per-row on narrow phones */
+    .phase-timer{
+      position:relative;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+      gap:8px;
+      margin-top:10px
+    }
+    .p-cell{background:transparent;border:1px dashed var(--border);border-radius:10px;padding:12px 10px;min-height:86px}
+    .p-number{font-family:Helvetica,"Helvetica Neue",Arial,sans-serif;font-weight:800;font-variant-numeric:tabular-nums;font-size:clamp(20px,5.5vw,30px);
               line-height:1;margin-bottom:6px;color:var(--headline);text-shadow:0 0 12px var(--glow)}
     .p-label{font-size:10px;text-transform:uppercase;letter-spacing:.12em;color:var(--subtle)}
 
@@ -97,19 +110,19 @@
       <div></div>
     </div>
 
-    <!-- Plain two-line dynamic title (no bold) -->
+    <!-- Two-line dynamic title: bold date/time + LEAR -->
     <h1 id="mainTitle" aria-live="polite">
       <div class="row1">
         <span class="lead">Сега е - </span>
         <span class="date" id="titleDate">среда, 24 септември 10:08,</span>
       </div>
-      <div class="row2">а крајот на рокот за ЛЕАР е за:</div>
+      <div class="row2">а крајот на рокот за <span class="lear">ЛЕАР</span> е за:</div>
     </h1>
 
     <div id="mainTimer" class="timer" role="timer" aria-live="polite">
       <div class="cell"><div class="number" id="weeks">00</div><div class="label">недели</div></div>
-      <div class="cell"><div class="number" id="days">00</div><div class="label">денови</div></div>
-      <div class="cell"><div class="number" id="hours">00</div><div class="label">часови</div></div>
+      <div class="cell"><div class="number" id="days">00</div><div class="label">дена</div></div>
+      <div class="cell"><div class="number" id="hours">00</div><div class="label">часа</div></div>
       <div class="cell"><div class="number" id="minutes">00</div><div class="label">минути</div></div>
       <div class="cell"><div class="number" id="seconds">00</div><div class="label">секунди</div></div>
     </div>
@@ -155,7 +168,7 @@
       {name:'Фаза 4 — Стаклени прегради',  done:false, deadline:mkDate(2025,12,8,0,0,0)},
     ];
 
-    // Done via URL or imperative API
+    // Done via URL or imperative API (?done=1,3)
     const params=new URLSearchParams(location.search);
     if (params.has('done')) { params.get('done').split(',').map(s=>parseInt(s,10)).filter(n=>!isNaN(n)).forEach(i=>{ if(PHASES[i]) PHASES[i].done=true; }); }
     window.setPhaseDone=function(i,val=true){ if (PHASES[i]) { PHASES[i].done=!!val; tick(); } };
@@ -184,8 +197,8 @@
       return { wd: MK_WEEKDAYS[d.getDay()], day: d.getDate(), m: MK_MONTHS[d.getMonth()], hh: pad2(d.getHours()), mm: pad2(d.getMinutes()) };
     }
     function formatDeadlineMK(d){
-      const wd=MK_WEEKDAYS[d.getDay()], day=d.getDate(), m=MK_MONTHS[d.getMonth()], y=d.getFullYear(), hh=pad2(d.getHours()), mm=pad2(d.getMinutes());
-      return wd + ', ' + day + ' ' + m + ' ' + y + ' ' + hh + ':' + mm;
+      const wd=MK_WEEKDAYS[d.getDay()], day=d.getDate(), month=MK_MONTHS[d.getMonth()], y=d.getFullYear(), hh=pad2(d.getHours()), mm=pad2(d.getMinutes());
+      return wd + ', ' + day + ' ' + month + ' ' + y + ' ' + hh + ':' + mm;
     }
     function formatTZ(offsetMin){
       const total = -offsetMin; const sign = total>=0? '+' : '-'; const abs = Math.abs(total);
@@ -224,11 +237,10 @@
           <div class="phase-title">${p.name}</div>
           <div class="phase-deadline" id="p_deadline_${i}"></div>
           <div class="phase-timer">
-            <div class="p-cell"><div class="p-number" id="p_w_${i}">00</div><div class="p-label">нед.</div></div>
-            <div class="p-cell"><div class="p-number" id="p_d_${i}">00</div><div class="p-label">ден.</div></div>
-            <div class="p-cell"><div class="p-number" id="p_h_${i}">00</div><div class="p-label">час.</div></div>
-            <div class="p-cell"><div class="p-number" id="p_m_${i}">00</div><div class="p-label">мин.</div></div>
-            <div class="p-cell"><div class="p-number" id="p_s_${i}">00</div><div class="p-label">сек.</div></div>
+            <div class="p-cell"><div class="p-number" id="p_w_${i}">00</div><div class="p-label">недели</div></div>
+            <div class="p-cell"><div class="p-number" id="p_d_${i}">00</div><div class="p-label">дена</div></div>
+            <div class="p-cell"><div class="p-number" id="p_h_${i}">00</div><div class="p-label">часа</div></div>
+            <div class="p-cell"><div class="p-number" id="p_m_${i}">00</div><div class="p-label">минути</div></div>
             <div class="done-overlay" id="p_overlay_${i}">ЗАВРШЕНО</div>
           </div>
         </div>
@@ -275,7 +287,6 @@
               td=document.getElementById('p_d_'+i),
               th=document.getElementById('p_h_'+i),
               tm=document.getElementById('p_m_'+i),
-              ts=document.getElementById('p_s_'+i),
               card=document.getElementById('p_card_'+i);
 
         const timeDone=(p.deadline - now)<=0;
@@ -283,11 +294,11 @@
 
         card.classList.remove('blink','is-done');
         if(isDone){
-          tw.textContent=td.textContent=th.textContent=tm.textContent=ts.textContent='00';
+          tw.textContent=td.textContent=th.textContent=tm.textContent='00';
           card.classList.add('is-done');
         } else {
           const diff=p.deadline-now;
-          renderNumbers(diff,{w:tw,d:td,h:th,m:tm,s:ts});
+          renderNumbers4(diff,{w:tw,d:td,h:th,m:tm});
           if(diff<=URGENT_MS) card.classList.add('blink');
         }
       });
@@ -307,11 +318,22 @@
       t.s.textContent=String(s).padStart(2,'0');
     }
 
+    function renderNumbers4(ms,t){
+      let diff=ms;
+      const w=Math.floor(diff/WEEK); diff%=WEEK;
+      const d=Math.floor(diff/DAY);  diff%=DAY;
+      const h=Math.floor(diff/HOUR); diff%=HOUR;
+      const m=Math.floor(diff/MIN);
+      t.w.textContent=String(w).padStart(2,'0');
+      t.d.textContent=String(d).padStart(2,'0');
+      t.h.textContent=String(h).padStart(2,'0');
+      t.m.textContent=String(m).padStart(2,'0');
+    }
+
     renderPhaseCards();
     tick();
     fitTitle();
     setInterval(tick,500);
-    // Re-fit on resize
     let _rto=null;
     window.addEventListener('resize',()=>{ clearTimeout(_rto); _rto=setTimeout(fitTitle, 80); });
   </script>
